[package]
name = "redstone-rs"
version = "0.1.0"
authors = ["LeoCornelius <leocornelius019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4.3"
sled = "0.34.6"
blake2 = "0.9.1"
secp256k1 = { version = "0.20.2", features = ["bitcoin_hashes"] }
vrf = "0.2.2"
rand = "0.8.4"
