[package]
name = "redstone_rs"
version = "0.1.0"
authors = ["LeoCornelius <leocornelius019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4.3"
sled = "0.34.6"
blake2 = "0.9.1"
secp256k1 = { version = "0.20.2", features = ["bitcoin_hashes", "rand"] }
vrf = "0.2.2"
rand = "0.5.0"
log = "0.4.14"
lazy_static = "1.4.0"
serde = "~1.0.82"
serde_derive = "1.0.104"
bson = "0.14"
unwrap = "~1.2.1"
simple_logger = "1.5.0"
x25519-dalek = "0.6.0"
aes-gcm = "0.8.0"
serde_json = "1"
enum_from_str_derive = "0.1.0"
enum_from_str = "0.1.0"